--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -63,7 +63,8 @@
         android:id="@+id/rvPokemon"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         app:layout_constraintVertical_bias="0"
         android:layout_marginHorizontal="@dimen/margin_default"
         android:layout_marginTop="10dp"
