--- a/app/src/main/res/layout/row_item_pokemon.xml
+++ b/app/src/main/res/layout/row_item_pokemon.xml
@@ -40,6 +40,8 @@
                 android:layout_marginHorizontal="@dimen/margin_default"
                 android:textSize="@dimen/text_big"
                 android:layout_marginTop="10dp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/shapeableImageViewPokemon"
