--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="margin_default">15dp</dimen>
     <dimen name="text_big">15sp</dimen>
+    <dimen name="text_big_x">20sp</dimen>
+    <dimen name="margin_big">30dp</dimen>
 </resources>
