--- a/app/src/main/res/layout/row_item_detail_base.xml
+++ b/app/src/main/res/layout/row_item_detail_base.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
-    android:layout_height="40dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
+    android:padding="@dimen/margin_default"
     android:foreground="?attr/selectableItemBackgroundBorderless"
     android:gravity="center"
-    android:layout_marginVertical="@dimen/margin_default"
-    android:layout_marginStart="@dimen/margin_default"
+    android:layout_marginEnd="@dimen/margin"
+    android:layout_marginVertical="@dimen/margin"
     android:background="@drawable/back_gray_container">
 
     <TextView
