--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="margin">8dp</dimen>
     <dimen name="margin_default">15dp</dimen>
     <dimen name="text_big">15sp</dimen>
     <dimen name="text_big_x">20sp</dimen>
