correct night theme

--- a/app/src/main/res/layout/activity_pokemon_detail.xml
+++ b/app/src/main/res/layout/activity_pokemon_detail.xml
@@ -109,7 +109,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin"
-                android:background="@drawable/back_gray_container"
+                android:elevation="2dp"
+                android:layout_marginStart="1dp"
+                android:background="@drawable/back_container"
                 android:padding="@dimen/margin_default"
                 android:textSize="@dimen/text_big"
                 app:layout_constraintStart_toStartOf="parent"
