--- a/app/src/main/res/layout-sw600dp/activity_pokemon_detail.xml
+++ b/app/src/main/res/layout-sw600dp/activity_pokemon_detail.xml
@@ -109,8 +109,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin"
-                android:background="@drawable/back_gray_container"
+                android:background="@drawable/back_container"
                 android:padding="@dimen/margin_default"
+                android:elevation="2dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginEnd="1dp"
                 android:textSize="@dimen/text_big"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
