--- a/app/src/main/res/layout-sw600dp/row_item_sprites.xml
+++ b/app/src/main/res/layout-sw600dp/row_item_sprites.xml
@@ -8,9 +8,11 @@
         android:id="@+id/image"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:elevation="2dp"
+        android:layout_marginEnd="1dp"
         android:layout_marginVertical="@dimen/margin_default"
         android:layout_marginStart="@dimen/margin_default"
         app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
-        android:background="@color/colorBlueGray50"/>
+        android:background="?attr/colorOnSecondary"/>
 
 </LinearLayout>
