--- a/app/src/main/res/layout/row_item_detail_base.xml
+++ b/app/src/main/res/layout/row_item_detail_base.xml
@@ -7,12 +7,14 @@
     android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
+    android:elevation="2dp"
     android:padding="@dimen/margin_default"
     android:foreground="?attr/selectableItemBackgroundBorderless"
     android:gravity="center"
+    android:layout_marginStart="1dp"
     android:layout_marginEnd="@dimen/margin"
     android:layout_marginVertical="@dimen/margin"
-    android:background="@drawable/back_gray_container">
+    android:background="@drawable/back_container">
 
     <TextView
         android:id="@+id/tvName"
