--- a/app/src/main/res/layout/row_item_pokemon.xml
+++ b/app/src/main/res/layout/row_item_pokemon.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:layout_marginHorizontal="@dimen/margin_default"
-                android:textColor="@color/colorPrimary"
+                android:textColor="?attr/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/shapeableImageViewPokemon"
                 app:layout_constraintTop_toBottomOf="@id/tvNamePokemon"
